Working without ties

--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
     <div class="userPlay">
         <input type="number" value="3">
         <button>Start</button>
-        <button class="hide">Attack</button>
-        <div class="container text-center">
-            <div class="gameplay"></div>
+
+        <div class="bigContainer">
+            <div class="leftContainer">
+                <textarea name="" id="" cols="40" rows="10"></textarea>
+                <button class="hide btn btn-success">Next round</button>
+            </div>
+            
+            <div class="container text-center">
+                <div class="gameplay"></div>
+            </div>
         </div>
 
         <div class="res"></div>
