--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="leftContainer">
                 <textarea name="" id="logger" cols="30" rows="5"></textarea>
                 <button class="hide btn btn-block btn-success mt-4">Next round</button>
+                <button class="btn btn-block btn-warning mt-4">Game reset</button>
             </div>
             
             <div class="container text-center">
